guacamole-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guacamole
  namespace: guacamole
spec:
  selector:
    app: guacamole
  ports:
    - name: http
      port: 80
      targetPort: 8080
