guacamole-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: guacamole
  namespace: guacamole
spec:
  to:
    kind: Service
    name: guacamole
  port:
    targetPort: http
  tls:
    termination: edge
